Added models/ folder to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 # MIMIC dataset CSV file
 mimic-iv-bhc.csv
 
+# Saved models
+models/
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
